[gd_scene load_steps=15 format=3 uid="uid://chwcd6r67wrek"]

[ext_resource type="Script" uid="uid://mxewfxu3vqp5" path="res://Scripts/Enemies/SpearEnemy.gd" id="1_uja8q"]
[ext_resource type="Texture2D" uid="uid://xavb0bfit6e5" path="res://scribble/PNG/Default/character_roundRed.png" id="2_gm6gh"]
[ext_resource type="Texture2D" uid="uid://ceowocb7tad4d" path="res://scribble/PNG/Default/character_handRed.png" id="3_4xiod"]
[ext_resource type="Texture2D" uid="uid://dhto8l2sihyu4" path="res://scribble/PNG/Default/item_spear.png" id="4_uja8q"]
[ext_resource type="Texture2D" uid="uid://vm15eeqddto7" path="res://scribble/PNG/Default/item_helmet.png" id="5_nknsx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4gdcm"]
radius = 15.0
height = 56.0

[sub_resource type="Animation" id="Animation_d7vyv"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flipper/BodySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flipper/BodySprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flipper/BodySprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Flipper/LeftHandSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, -2.1599)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Flipper/RightHandSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3.1599, 13.6802)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Flipper/RightHandSprite:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.649909]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Flipper/RightHandSprite/SpearSprite:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, -3.8147e-06)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Flipper/RightHandSprite/SpearSprite:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Flipper/LeftHandSprite:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.649909]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Flipper/BodySprite/ItemHelmet:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -13)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Flipper/BodySprite/ItemHelmet:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Flipper/LeftHandSprite:z_index")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nknsx"]
resource_name = "spear_stab_1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flipper/LeftHandSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0352322, 0.102341, 0.140929, 0.157706, 0.189583, 0.211393, 0.558681, 0.701366, 0.734842, 0.760008),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(40, -18), Vector2(37, -7), Vector2(27, -1), Vector2(20, 5), Vector2(13, 10), Vector2(-8, 25), Vector2(-20, 24), Vector2(-20, 24), Vector2(78, 12), Vector2(97.0001, 12), Vector2(78, 12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flipper/RightHandSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0318767, 0.104019, 0.16945, 0.211393, 0.563714, 0.602302, 0.701366, 0.734842, 0.760008),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(28, 14), Vector2(24, 22), Vector2(11, 19), Vector2(-36.2, 18), Vector2(-38, 5), Vector2(-38, 5), Vector2(-36.2, 18), Vector2(50, 1), Vector2(69.0001, 1), Vector2(50, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flipper/RightHandSprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0318767, 0.104019, 0.162739, 0.213071, 0.562037, 0.649278, 0.701366),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0500717, 0.163392, 1.57079, 1.91479, 1.91479, 1.57079, 1.57079]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Flipper/LeftHandSprite:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.570425, 0.765041),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_spear_hitbox"
}, {
"args": [false],
"method": &"set_spear_hitbox"
}]
}

[sub_resource type="Animation" id="Animation_fsb2l"]
resource_name = "run"
length = 0.4
loop_mode = 2
step = 0.3333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flipper/BodySprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.206034, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.703125, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flipper/LeftHandSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(2.54912, 2.54912),
"update": 0,
"values": [Vector2(-32, 11), Vector2(39, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flipper/RightHandSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(2.54912, 2),
"update": 0,
"values": [Vector2(23, 5), Vector2(-30, 15)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Flipper/RightHandSprite:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.301862, 1.16575]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Flipper/BodySprite/ItemHelmet:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0830555, 0.2, 0.322176, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -13), Vector2(0, -19), Vector2(5.5175e-07, -24), Vector2(0, -19), Vector2(0, -13)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Flipper/BodySprite/ItemHelmet:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.11, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 0.75281, 1, 1),
"update": 0,
"values": [0.0, -0.233754, -0.233754, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_scqe6"]
_data = {
&"RESET": SubResource("Animation_d7vyv"),
&"run": SubResource("Animation_fsb2l"),
&"spear_stab_1": SubResource("Animation_nknsx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bhb2o"]
size = Vector2(55, 59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nknsx"]
size = Vector2(126, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fsb2l"]
size = Vector2(611, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sai8i"]
size = Vector2(27, 48.8727)

[node name="SpearBean" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_uja8q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_4gdcm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_scqe6")
}
autoplay = "run"

[node name="Flipper" type="Node2D" parent="."]

[node name="HurtBox" type="Area2D" parent="Flipper"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flipper/HurtBox"]
position = Vector2(0.5, -7.5)
shape = SubResource("RectangleShape2D_bhb2o")

[node name="StabArea" type="Area2D" parent="Flipper"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flipper/StabArea"]
position = Vector2(53, -8)
shape = SubResource("RectangleShape2D_nknsx")

[node name="ChaseArea" type="Area2D" parent="Flipper"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flipper/ChaseArea"]
position = Vector2(-5, -8)
shape = SubResource("RectangleShape2D_fsb2l")

[node name="CliffRayCast" type="RayCast2D" parent="Flipper"]
position = Vector2(23, 27)
target_position = Vector2(0, 74)

[node name="TurnAroundRayCast" type="RayCast2D" parent="Flipper"]
position = Vector2(23, 15)
rotation = -1.57079
target_position = Vector2(2.86102e-05, 13)

[node name="LeftHandSprite" type="Sprite2D" parent="Flipper"]
modulate = Color(0.622881, 0.622881, 0.622881, 1)
position = Vector2(20, -2.1599)
rotation = 0.649909
texture = ExtResource("3_4xiod")

[node name="BodySprite" type="Sprite2D" parent="Flipper"]
texture = ExtResource("2_gm6gh")

[node name="ItemHelmet" type="Sprite2D" parent="Flipper/BodySprite"]
position = Vector2(0, -13)
texture = ExtResource("5_nknsx")

[node name="RightHandSprite" type="Sprite2D" parent="Flipper"]
z_index = 2
position = Vector2(-3.1599, 13.6802)
rotation = 0.649909
texture = ExtResource("3_4xiod")

[node name="SpearSprite" type="Sprite2D" parent="Flipper/RightHandSprite"]
z_index = 1
z_as_relative = false
position = Vector2(6, -3.8147e-06)
scale = Vector2(1, 0.859375)
texture = ExtResource("4_uja8q")
offset = Vector2(0, -35.025)

[node name="Hitbox" type="Area2D" parent="Flipper/RightHandSprite/SpearSprite" groups=["damages_player"]]
position = Vector2(0.94259, -68.5217)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flipper/RightHandSprite/SpearSprite/Hitbox"]
position = Vector2(-3.93391e-06, -3.75509e-06)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_sai8i")

[connection signal="area_entered" from="Flipper/HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="Flipper/StabArea" to="." method="_on_stab_area_body_entered"]
[connection signal="body_entered" from="Flipper/ChaseArea" to="." method="_on_chase_area_body_entered"]
[connection signal="body_exited" from="Flipper/ChaseArea" to="." method="_on_chase_area_body_exited"]
